Adding new demo

--- a/index.html
+++ b/index.html
@@ -1,61 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="demo">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test title</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
-    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;600;700&family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Home</title>
+    <!-- font-family: 'Anonymous Pro', monospace; -->
+    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">   
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <section class="left-right-image-section m-3">
+<!-- Header Start -->
+<header>
+</header>
+<!--  Header End  -->
+
+
+<!-- Section Start -->
+<section>
+    <div class="image_block_wrapper">
         <div class="container">
-            <div class="row d-flex align-items-start d">
-                <div class="col-xl-4 col-md-12 d-none d-xl-block">
-                    <div class="image_wrapper mb-3 mb-md-0 d-block text-center">
-                        <img src="assets/images/first-pic@2x.png" alt="some text" class="img-fluid">
-                    </div>
-                </div>
-                <div class="col-xl-8 col-md-12">
-                    <img src="assets/images/first-pic@2x.png" alt="some text" class="fluid_img img-fluid float-left text-center d-xl-none">
-                    <div class="text_wrapper mx-md-3">
-                        <p class="">
-                            Aquiles, an Argentine visual artist and Art Director, was born in 1991 to an art teacher and
-                            workshop owner. Involved with art since childhood, he turns to those memories to create his world
-                            of elements, palettes and shapes that consituate his artwork.
-                        </p>
-                        <p class="">
-                            He began his artistic
-                            career in 2010 at the age of 19, merging his passion for painting with his studies on Advertising
-                            and ArtDirection. Even though his main strength is muralism, he's constantly seeking new ways
-                            in which he can apply his art such as illustration, products, cinema and advertising.
-                        </p>
-                        <p class="">
-                            About
-                            three years ago he embarked on the journey to reflect his point of view abstractly, by revisiting
-                            his essence, adapting his palette and repurposing his message.
-                        </p>
-                        <p class="">
-                            His art has travelled
-                            the world as he painted and exhibited in different cities in Europe such as Barcelona and Berlin,
-                            Latin America and Los Angeles.
-                        </p>
-                        <p class="">
-                            During the quarantine of 2020 he started working on his
-                            'Lego'series which reflects through his large-scale paintings, his childhood, his
-                            convictions and frustrations with the special ingredient of confinement.
-                        </p>
-                    </div>
-                </div>
+            <div class="block_wrap">
+                <div class="img_block">
+                    <img src="assets/images/image.png" alt="image">
+
+                    <div class="block_content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur auctor vestibulum. Aenean tincidunt tortor eget nulla facilisis maximus. Integer mattis erat ut lacus dapibus, sed ultrices felis semper. Phasellus tempor at nisl vel rutrum. Aliquam id bibendum lacus. Phasellus in interdum ante, quis hendrerit urna. Sed ultrices diam ac faucibus maximus. Nunc congue justo velit, in rhoncus nisi luctus ut. Pellentesque ligula elit, pretium at odio ac, pretium laoreet mauris.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur auctor vestibulum. Aenean tincidunt tortor eget nulla facilisis maximus. Integer mattis erat ut lacus dapibus, sed ultrices felis semper. </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur auctor vestibulum. Aenean tincidunt tortor eget nulla facilisis maximus. Integer mattis erat ut lacus dapibus, sed ultrices felis semper. Phasellus tempor at nisl vel rutrum. Aliquam id bibendum lacus. Phasellus in interdum ante, quis hendrerit urna. Sed ultrices diam ac faucibus maximus. Nunc congue justo velit, in rhoncus nisi luctus ut. Pellentesque ligula elit, pretium at odio ac, pretium laoreet mauris.</p>
+                    </div>    
+                </div>                           
             </div>
         </div>
-    </section>
-    <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
-    <script src="assets/js/jquery.matchHeight-min.js"></script>
-    <script src="assets/js/custom.js"></script>
+    </div>
+</section>
+<!-- Section End -->
+
+
+<!-- Footer Start -->
+<footer>
+
+</footer>
+<!-- Footer End -->
 </body>
-</html>
